# FANUC_dev

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  COWORK_CURSOR_SYNERGY_PLAN.md  FANUC_dev.code-workspace  GH_OPTIMAL_ARCHITECTURE.md
.cursor/rules/: customer-program-repository.mdc  fanuc-dataset-reference.mdc  fanuc-ros2-driver.mdc  fanuc-tp-conventions.mdc  fanuc-workspace-context.mdc  ldj-integration.mdc  (+2 more)
LDJ/: INTEGRATION_FLOW.md  LDJ_Controls_Engineer_Overview.md  LDJ_INTEGRATION_INDEX.md  LDJ_README.md  PHYSICAL_WIRING_OVERVIEW.md  press_brake_reference.md  robot_interface_reference.md
TeachPendant/: .cursorignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MIGRATION_LOG.md  README.md  SETUP.md  teachpendant.code-workspace
TeachPendant/mcp_servers/fanuc_knowledge/: README.md  pyproject.toml
TeachPendant/mcp_servers/fanuc_knowledge/fanuc_knowledge/: __init__.py  server.py
TeachPendant/mcp_servers/fanuc_safety_lint/: README.md  pyproject.toml
TeachPendant/mcp_servers/fanuc_safety_lint/fanuc_safety_lint/: __init__.py  rules.py  server.py
TeachPendant/mcp_servers/program_repository/: README.md  pyproject.toml
TeachPendant/mcp_servers/program_repository/program_repository/: __init__.py  server.py
customer_programs/: HANDOFF_LDJ-BLM_ManualPrograms_2026-04-20.md  HANDOFF_LDJ-BLM_Phase1_2026-04-20.md  HANDOFF_LDJ-BLM_Phase2_2026-04-20.md  HANDOFF_LDJ-BLM_Phase3_2026-04-20.md  HANDOFF_LDJ-BLM_Phase4_2026-04-20.md  PROGRAM_REPOSITORY_INDEX.md  REVIEW_LDJ-BLM_R01_2026-04-15.md  _manifest.json
physical_ai/: PHYSICAL_AI_INDEX.md
(+4307 files in other folders)
