[project]
name = "fanuc_safety_lint"
version = "0.1.0"
description = "MCP server for deterministic static safety and convention linting of FANUC TP/LS and KAREL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=0.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fanuc_safety_lint"]
